[project]
name = "pronto-py-pure-client"
version = "1.29.0"
description = "Pure Storage Python clients for FlashArray, FlashBlade, and Pure1 APIs"

readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.5"
keywords = ['Swagger', 'Pure Storage', 'Python', 'clients', 'REST', 'API', 'FlashArray', 'FlashBlade', 'Pure1']
classifiers = [
    "Topic :: Software Development :: SDK",
    "Operating System :: OS Independent"
]

[project.urls]
"GitHub" = "https://github.com/PureStorage-OpenConnect/py-pure-client"
"Documentation" = "https://pure-storage-py-pure-client.readthedocs-hosted.com/en/latest/quick_start.html"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"